Fixed wrapping

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ h3 {
 
 h1 {
   text-transform: uppercase;
-  font-size: clamp(2rem, 5rem, 6rem);
+  font-size: clamp(2rem, 5vw + 1rem, 6rem);
   max-width: 8ch;
   text-align: center;
   line-height: 80%;
@@ -105,11 +105,11 @@ h1 {
 
 h2 {
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: clamp(1.5rem, 5vw + 1rem, 4rem);
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 5vw + 1rem, 1.5rem);
   padding-block: 0.5rem;
 }
 
@@ -120,7 +120,16 @@ section {
 }
 
 section > div {
-  width: 75vw;
+  width: clamp(320px, 90%, 1200px);
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 5dvh;
+  background-color: var(--yellow);
 }
 
 .resume {
@@ -138,12 +147,14 @@ section > div {
 
 .about {
   text-align: center;
-  max-width: 45ch;
+  max-width: 72ch;
 }
 
 .socials {
   list-style: none;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   gap: 10px;
 }
@@ -241,11 +252,21 @@ section > div {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-  max-width: 50vw;
+  width: clamp(320px, 90%, 1200px);
 }
 
 .skills-list li {
   background-color: var(--yellow);
   padding: 0.5rem 2rem;
   border-radius: 0.5rem;
+}
+
+.education-card {
+  max-width: 75rem;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  border-radius: 20px;
+  background-color: var(--card-background);
+  border: 1px solid var(--yellow);
 }
